// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addReleaseEvent add send_service_catalog job with all parameters 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo \\"latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)\\" >> $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v3
        with:
          name: build-artifact
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v3
        with:
          node-version: 16.x
      - name: Download build artifacts
        uses: actions/download-artifact@v3
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then cat $errout; exit $exitcode; fi
  send_service_catalog:
    name: Send to Datadog Service Catalog
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v3
        with:
          name: build-artifact
          path: dist
      - name: Get version
        id: event_metadata
        run: echo \\"release_tag=$(cat dist/releasetag.txt)\\" >> $GITHUB_OUTPUT
      - name: Publish DD Service Catalog for test-service
        uses: arcxp/datadog-service-catalog-metadata-provider@v2
        with:
          service-version: \\"2.1\\"
          datadog-hostname: app.datadoghq.com
          datadog-key: \${{ secrets.DD_PROJEN_RELEASE_API_KEY }}
          datadog-app-key: \${{ secrets.DD_PROJEN_RELEASE_APP_KEY }}
          service-name: test-service
          description: test description test-service 1
          application: clickup
          tier: critical
          lifecycle: Not Provided
          team: Not Provided
          pagerdutyUrl: https://test.pagerduty.com
          slack-support-channel: https://click-up.slack.com/archives/C043T0JBJKY
          contacts: |-
            
            - type: email
              contact: contacttest@clickup.com
              name: contact test
          links: |2-
             
            - type: other
              url: https://test.clickup.com
              name: link test, 
            - type: other
              url: https://staging.clickup.com
              name: staging link test
          tags: |-
            
            - project:test-cdk,
            - release:true,
            - version:\${{ steps.event_metadata.outputs.release_tag }},
            - actor:\${{ github.actor }},
            - tag1:tag1-test,
            - tag2:tag2-test
"
`;

exports[`addReleaseEvent adds job to release workflow with service catalog options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v3
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: release
        run: npx projen release
      - name: Check for new commits
        id: git_remote
        run: echo \\"latest_commit=$(git ls-remote origin -h \${{ github.ref }} | cut -f1)\\" >> $GITHUB_OUTPUT
      - name: Backup artifact permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v3
        with:
          name: build-artifact
          path: dist
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v3
        with:
          node-version: 16.x
      - name: Download build artifacts
        uses: actions/download-artifact@v3
        with:
          name: build-artifact
          path: dist
      - name: Restore build artifact permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          GITHUB_REPOSITORY: \${{ github.repository }}
          GITHUB_REF: \${{ github.ref }}
        run: errout=$(mktemp); gh release create $(cat dist/releasetag.txt) -R $GITHUB_REPOSITORY -F dist/changelog.md -t $(cat dist/releasetag.txt) --target $GITHUB_REF 2> $errout && true; exitcode=$?; if [ $exitcode -ne 0 ] && ! grep -q \\"Release.tag_name already exists\\" $errout; then cat $errout; exit $exitcode; fi
  send_service_catalog:
    name: Send to Datadog Service Catalog
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: needs.release.outputs.latest_commit == github.sha
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v3
        with:
          name: build-artifact
          path: dist
      - name: Get version
        id: event_metadata
        run: echo \\"release_tag=$(cat dist/releasetag.txt)\\" >> $GITHUB_OUTPUT
      - name: Publish DD Service Catalog for test-service
        uses: arcxp/datadog-service-catalog-metadata-provider@v2
        with:
          service-version: \\"2.1\\"
          datadog-hostname: app.datadoghq.com
          datadog-key: \${{ secrets.DD_PROJEN_RELEASE_API_KEY }}
          datadog-app-key: \${{ secrets.DD_PROJEN_RELEASE_APP_KEY }}
          service-name: test-service
          description: test description test-service 1
          application: clickup
          tier: critical
          lifecycle: unit-test
          team: testing
          pagerdutyUrl: https://test.pagerduty.com
          slack-support-channel: https://click-up.slack.com/archives/C043T0JBJKY
          contacts: undefined
          links: undefined
          tags: |-
            
            - project:test-cdk,
            - release:true,
            - version:\${{ steps.event_metadata.outputs.release_tag }},
            - actor:\${{ github.actor }}
      - name: Publish DD Service Catalog for test-cdk
        uses: arcxp/datadog-service-catalog-metadata-provider@v2
        with:
          service-version: \\"2.1\\"
          datadog-hostname: app.datadoghq.com
          datadog-key: \${{ secrets.DD_PROJEN_RELEASE_API_KEY }}
          datadog-app-key: \${{ secrets.DD_PROJEN_RELEASE_APP_KEY }}
          service-name: test-cdk
          description: Not Provided
          application: clickup
          tier: low
          lifecycle: Not Provided
          team: testing
          pagerdutyUrl: Not Provided
          slack-support-channel: https://click-up.slack.com/archives/C043T0JBJKY
          contacts: undefined
          links: undefined
          tags: |-
            
            - project:test-cdk,
            - release:true,
            - version:\${{ steps.event_metadata.outputs.release_tag }},
            - actor:\${{ github.actor }}
"
`;
